--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<app-main></app-main>
-<app-result></app-result>
+  <app-main (chosenMovEmitter)="onMovieSelected($event)"></app-main>
+  <app-result [selectedMovie]="res"></app-result>
